# AutoWatering

./: .gitignore  AGENTS.md  AwLogging.ino  CONTEXT.md  Clock.ino  pinmap.md  platformio.ini  readme.md  sketch_auto_watering.ino  заготовка распиновки.spl8  прототип главного экрана.spl8
docs/: 2026-07-19-fable-review.md  2026-07-19-glm-review.md  2026-07-20-review-status.md
docs/adr/: 0001-local-mqtt-broker.md
docs/icon/: draw_icon.py
server/: Dockerfile  pyproject.toml
server/aw_server/: __init__.py  config.py  core.py  loki.py  main.py  mqtt_bridge.py  telegram_bot.py
server/tests/: test_config.py  test_core.py  test_loki.py  test_mqtt_bridge.py
src/: AwClock.h  AwLogging.h  AwLogging.ino  Clock.ino  CmdHandler.h  CommandParser.h  Communication.cpp  Communication.h  CurrentSensor.h  EspLogger.h  EspMain.cpp  FlowMeter.h  Graph.h  LogRing.h  Pomp.h  Pomp.ino  Screen.h  Screen.ino  Sensors.h  Sensors.ino  State.h  Valves.h  additinal_info.txt  sketch_auto_watering.ino
tasks/: 2026-05-24_valve_detect_pattern.md  2026-05-26_yandex_alice_integration.md  2026-07-04_mqtt_dealgate_implementation_plan.md  2026-07-20_mqtt_server_migration.md
test/stubs/: Arduino.h  State.h
test/test_cmd_handler/: test_main.cpp
test/test_command_parser/: test_main.cpp
test/test_graph/: test_main.cpp
test/test_log_ring/: test_main.cpp
