[project]
name = "aw-server"
version = "0.1.0"
description = "AutoWatering aw-server: ядро-роутер + мост логов ESP в Loki (issue #14)"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1,<3",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aw_server*"]
